--- a/Main/Self.ipynb
+++ b/Main/Self.ipynb
@@ -31,6 +31,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'asdf1234': {'firstname': 'john', 'lastname': 'smith', 'age': 30}, 'sdfg2345': {'firstname': 'jane', 'lastname': 'doe', 'age': 25}, 'dfgh3456': {'firstname': 'billy', 'lastname': 'ericson', 'age': 35}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dicts = [\n",
+    "   {\n",
+    "      \"id\":\"asdf1234\",\n",
+    "      \"firstname\":\"john\",\n",
+    "      \"lastname\":\"smith\",\n",
+    "      \"age\":30\n",
+    "   },\n",
+    "   {\n",
+    "      \"id\":\"sdfg2345\",\n",
+    "      \"firstname\":\"jane\",\n",
+    "      \"lastname\":\"doe\",\n",
+    "      \"age\":25\n",
+    "   },\n",
+    "   {\n",
+    "      \"id\":\"dfgh3456\",\n",
+    "      \"firstname\":\"billy\",\n",
+    "      \"lastname\":\"ericson\",\n",
+    "      \"age\":35\n",
+    "   }\n",
+    "]    \n",
+    "\n",
+    "new_dicts = {d.pop('id'): d for d in dicts}\n",
+    "\n",
+    "print(new_dicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -272,6 +312,28 @@
     "\n",
     "print(df1)\n",
     "print (df2+df3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'agam', 'age': 20, 'city': 'New York'}, {'name': 'adhi', 'age': 21, 'city': 'New York'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "people = [{\"name\":\"agam\",\"age\":20,\"city\":\"\"},{\"name\":\"adhi\",\"age\":21}]\n",
+    "# Add a new property called \"city\" to each object\n",
+    "for person in people:\n",
+    "  person[\"city\"] = \"New York\"\n",
+    "print(people)\n",
+    "\n"
    ]
   }
  ],
